# address_verification_registry_proof_sp1

./: .gitignore  p2pkh-inputs.json
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
