[package]
version = "0.1.0"
name = "p2pkh-script"
edition = "2021"
default-run = "p2pkh"

[[bin]]
name = "p2pkh"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "5.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
p2pkh-lib = { path = "../lib" }
dotenv = "0.15.0"

[build-dependencies]
sp1-build = "5.0.0"
